# purple

./: .gitignore  .gitmodules  CMakeLists.txt  makeparser.bat
.github/workflows/: run-tests.yml
ext/: CMakeLists.txt
ext/doctest/: doctest.h
src/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  purple_grammar.g4
tests/: CMakeLists.txt  test_add.cpp  test_sub.cpp
